--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>sandbox</title>
-    <link rel="stylesheet" href="css/app.css">
-    <link rel="styles">
-  </head>
-  <body>
-    
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Nikolay Kovzik CV</title>
+</head>
 
+<body>
+        <header>
+          <h1>Nikolay Kovzik</h1>
+          <h3>Front-end developer</h3>
+        </header>
 
-   <script>
-  </script>
-  </body>
+        <main>
+          <section class="about"> </section>
+          <section class="description"> </section>
+          <aside></aside>
+        </main>
+
+        <footer>
+
+        </footer>  
+</body>
 </html>
