feat: add image & minor fixes

--- a/index.html
+++ b/index.html
@@ -10,18 +10,34 @@
 
 <body>
         <header>
-          <h1>Nikolay Kovzik</h1>
-          <h3>Front-end developer</h3>
+          <figure class="myPhoto">
+            <img src="img/1.jpeg" alt="Nikolay Kovzik"/>
+          </figure>
+          <div class="container">
+              <h1>Nikolay Kovzik</h1>
+              <h3>Front-end developer</h3>
+          </div>
+          
         </header>
 
         <main>
           <section class="about"> </section>
           <section class="description"> </section>
-          <aside></aside>
         </main>
 
         <footer>
-
+            <br>
+            еще раз ссылки
+            ccылки
+            <br>
+            ссылки
+            <br>
+            еще раз ссылки
+            ccылки
+            <br>
+            ссылки
+            <br>
+            еще раз ссылки
         </footer>  
 </body>
 </html>
