feat: add navigation

--- a/index.html
+++ b/index.html
@@ -8,14 +8,27 @@
   <title>Nikolay Kovzik CV</title>
 </head>
 
-<body>
+<body>  
         <header>
-          <figure class="myPhoto">
-            <img src="img/1.jpeg" alt="Nikolay Kovzik"/>
-          </figure>
-          <div class="container">
-              <h1>Nikolay Kovzik</h1>
-              <h3>Front-end developer</h3>
+          <nav class="navigation">
+            <ul class="page-navigation">
+                <li class="page-navigation-item"><a  href="#aboutMyself">About Myself</a></li>
+                <li class="page-navigation-item"><a  href="#contacts">Contacts</a></li>
+                <li class="page-navigation-item"><a  href="#skills">Skills</a></li>
+                <li class="page-navigation-item"><a  href="#education">Education</a></li>
+                <li class="page-navigation-item"><a  href="#english">English</a></li>
+                <li class="page-navigation-item"><a  href="#code">Code</a></li>
+                <li class="page-navigation-item"><a  href="#projects">Projects</a></li>
+            </ul>
+          </nav>
+          <div class = "container-header">
+              <figure class="myPhoto">
+                <img src="img/1.jpeg" alt="Nikolay Kovzik"/>
+              </figure>
+              <div class="container-initials">
+                  <h1>Nikolay Kovzik</h1>
+                  <p>Front-end developer</p>
+              </div>
           </div>
           
         </header>
