feat: add basic sections

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <header>
           <nav class="navigation">
             <ul class="page-navigation">
-                <li class="page-navigation-item"><a  href="#aboutMyself">About Myself</a></li>
+                <li class="page-navigation-item"><a  href="#about-myself">About Myself</a></li>
                 <li class="page-navigation-item"><a  href="#contacts">Contacts</a></li>
                 <li class="page-navigation-item"><a  href="#skills">Skills</a></li>
                 <li class="page-navigation-item"><a  href="#education">Education</a></li>
                 <li class="page-navigation-item"><a  href="#english">English</a></li>
-                <li class="page-navigation-item"><a  href="#code">Code</a></li>
-                <li class="page-navigation-item"><a  href="#projects">Projects</a></li>
+                <li class="page-navigation-item"><a  href="#code-example">Code</a></li>
+                <li class="page-navigation-item"><a  href="#project">Projects</a></li>
             </ul>
           </nav>
           <div class = "container-header">
@@ -30,27 +30,45 @@
                   <p>Front-end developer</p>
               </div>
           </div>
-          
         </header>
 
         <main>
-          <section class="about"> </section>
-          <section class="description"> </section>
+          <section id="about-myself"> 
+              <h2>About myself</h2>
+              <p>My name is Nikolay. I am 25 years old. I study by correspondence at the Belarusian State University of Informatics and Radioelectronics.
+                 My speciality is calculating machines, systems and networks.
+                 I don’t have any working experience in the IT sphere, but i’m hungry for knowledge and new experience and have a massive desire to fill in this gap.
+                 In some situations my perfectionism seems excessive, but i'm trying to cope with it.
+            </p>
+          </section>
+          <!--------------------------------------------------------------------->
+          <section id="contacts"> 
+              <h2>Contacts</h2>
+          </section>
+          <!--------------------------------------------------------------------->
+          <section id="skills"> 
+              <h2>Skills</h2>
+          </section>
+          <!--------------------------------------------------------------------->
+          <section id="education"> 
+              <h2>Education</h2>
+          </section>
+          <!--------------------------------------------------------------------->
+          <section id="english"> 
+              <h2>English</h2>
+          </section>
+          <!--------------------------------------------------------------------->
+          <section id="project">
+              <h2>Project</h2>
+          </section>
+          <!--------------------------------------------------------------------->
+          <section id="code-example"> 
+              <h2>Code Example</h2>
+          </section>
         </main>
 
         <footer>
-            <br>
-            еще раз ссылки
-            ccылки
-            <br>
-            ссылки
-            <br>
-            еще раз ссылки
-            ccылки
-            <br>
-            ссылки
-            <br>
-            еще раз ссылки
+            
         </footer>  
 </body>
 </html>
