--- a/index.html
+++ b/index.html
@@ -44,15 +44,47 @@
               </section>
               <!--------------------------------------------------------------------->
               <section id="contacts"> 
-                  <h2>Contacts</h2>
+                <h2>Contacts</h2>
+                  <ul class="contacts-list">
+                    <li class="github">
+                      <a href="https://github.com/NikolayKovzik" title="github">
+                        NikolayKovzik
+                      </a>
+                    </li>
+                    <li class="mail">
+                      <a href="mailto:nikolaykovzik@gmail.com" title="email">
+                        nikolaykovzik@gmail.com
+                      </a>
+                    </li>
+                    <li class="phone">
+                      +375445012347
+                    </li>
+                    <li class="discord">
+                      theroofisonfire#1523
+                    </li>
+                  </ul>
+
               </section>
               <!--------------------------------------------------------------------->
               <section id="skills"> 
                   <h2>Skills</h2>
+                  <ul class="skills-list">
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>JavaScript basics</li>
+                    <li>Adobe Photoshop</li>
+                    <li>VS Code</li>
+                    <li>Git</li>
+                  </ul>
               </section>
               <!--------------------------------------------------------------------->
               <section id="education"> 
                   <h2>Education</h2>
+                  <p class="education-list">
+                    Belarussian State University of Informatics and Radioelectronics, Calculating Machines System and Networks faculty, fifth course of study.
+                    HTML Academy trainings
+                    RS Schools Course «JavaScript/Front-end Stage 0» (in progress)
+                  </p>
               </section>
               <!--------------------------------------------------------------------->
               <section id="languages"> 
@@ -61,11 +93,11 @@
                     <li>English - B1</li>
                     <li>Russian - Native Speaker</li>
                   </ul>
-                  <p></p>
               </section>
               <!--------------------------------------------------------------------->
               <section id="project">
                   <h2>Project</h2>
+                  <p><a href="https://nikolaykovzik.github.io/rsschool-cv/">CV</a></p>
               </section>
           </div>
 
@@ -92,7 +124,9 @@
         </main>
 
         <footer>
-            
+            <a href="https://github.com/NikolayKovzik"><img src="img/git.png" alt="git"></a>
+            <a href="https://rs.school/"><img src="img/rs.svg" alt="rs"></a>
+            <span class="year"> 2021</span>
         </footer>  
 </body>
 </html>
