fix: minor fixes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Nikolay Kovzik CV</title>
+  
 
 </head>
 
@@ -83,11 +84,11 @@
                 <h2>&nbsp;&nbsp;&nbsp;Soft-Skills</h2>
                 <ul class="skills-list">
                   <li>Perseverance</li>
-                  <li>CSS3</li>
-                  <li>JavaScript basics</li>
-                  <li>Adobe Photoshop</li>
-                  <li>VS Code</li>
-                  <li>Git</li>
+                  <li>Teamwork</li>
+                  <li>Work Ethic</li>
+                  <li>Lernability</li>
+                  <li>Desire to learn</li>
+                  <li>Research</li>
                 </ul>
             </section>
               
@@ -141,7 +142,7 @@
             <footer>
                 <a href="https://github.com/NikolayKovzik"><img src="img/git.png" alt="git"></a>
                 <a href="https://rs.school/"><img src="img/rs.svg" alt="rs"></a>
-                <span class="year"> 2021</span>
+                <span class="year">©&nbsp;2022</span>
             </footer>  
  </body>
 </html>
