feat: add icons for contacts

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <header>
           <nav class="navigation">
             <ul class="page-navigation">
-                <li class="page-navigation-item"><a  href="#about-myself">About&nbsp;Myself</a>&nbsp;</li>
-                <li class="page-navigation-item"><a  href="#contacts">Contacts</a>&nbsp;</li>
-                <li class="page-navigation-item"><a  href="#hard-skills">Skills</a>&nbsp;</li>
-                <li class="page-navigation-item"><a  href="#education">Education</a>&nbsp;</li>
-                <li class="page-navigation-item"><a  href="#languages">English</a>&nbsp;</li>
-                <li class="page-navigation-item"><a  href="#code-example">Code</a>&nbsp;</li>
-                <li class="page-navigation-item"><a  href="#project">Projects</a></li>
+                <li><a  href="#about-myself">About&nbsp;Myself</a>&nbsp;</li>
+                <li><a  href="#contacts">Contacts</a>&nbsp;</li>
+                <li><a  href="#hard-skills">Skills</a>&nbsp;</li>
+                <li><a  href="#education">Education</a>&nbsp;</li>
+                <li><a  href="#languages">English</a>&nbsp;</li>
+                <li><a  href="#code-example">Code</a>&nbsp;</li>
+                <li><a  href="#project">Projects</a></li>
             </ul>
           </nav>
           <div class = "container-header">
@@ -65,7 +65,6 @@
                       theroofisonfire#1523
                     </li>
                   </ul>
-
               </section>
              
               <section id="hard-skills"> 
