--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                   <ul class="skills-list">
                     <li>HTML5</li>
                     <li>CSS3</li>
-                    <li>JavaScript basics</li>
-                    <li>Figma</li>
-                    <li>VS Code</li>
+                    <li>JavaScript</li>
+                    <li>SCSS</li>
                     <li>Git</li>
+                    <li>Figma</li>
                   </ul>
               </section>
 
@@ -113,7 +113,7 @@
                 <h2 class="code-header">Code Example</h2>
               <pre><code>
 
-                
+
         Array.prototype.map = function (fn) {
           return this.reduce((resArr, item) => {
             resArr.push(fn(item));
